fix jdbc tests and upgrade Curator tests