@@ -96,7 +96,7 @@
         <libs.jackson.mapper>2.10.3</libs.jackson.mapper>
         <libs.zookeeper>3.6.2</libs.zookeeper>
         <libs.jsqlparser>3.2</libs.jsqlparser>
-        <libs.curator>2.12.0</libs.curator>
+        <libs.curator>5.1.0</libs.curator>
         <libs.guava>29.0-jre</libs.guava>
         <libs.slf4j>1.7.29</libs.slf4j>
         <libs.commonscollections>3.2.2</libs.commonscollections>
@@ -632,7 +632,7 @@
                         <configuration>
                             <reuseForks>false</reuseForks>
                             <forkedProcessTimeoutInSeconds>1800</forkedProcessTimeoutInSeconds>
-                            <argLine>-Dzookeeper.forceSync=no -Dio.netty.tryReflectionSetAccessible=true -Xmx2G -XX:+UseG1GC -Djava.io.tmpdir=${project.build.directory}</argLine>
+                            <argLine>-Dzookeeper.forceSync=no -Dio.netty.tryReflectionSetAccessible=true -Xmx2G -XX:+UseG1GC -Djava.io.tmpdir=${project.build.directory} --add-opens=java.base/java.nio=ALL-UNNAMED</argLine>
                             <trimStackTrace>false</trimStackTrace>
                         </configuration>
                     </plugin>
@@ -866,7 +866,7 @@
                         <version>3.0.0-M5</version>
                         <configuration>
                             <reuseForks>false</reuseForks>
-                            <argLine>-Xmx2G -XX:+UseG1GC  @{argLine}</argLine>
+                            <argLine> --add-opens=java.base/java.nio=ALL-UNNAMED -Xmx2G -XX:+UseG1GC  @{argLine}</argLine>
                             <trimStackTrace>false</trimStackTrace>
                             <forkedProcessTimeoutInSeconds>900</forkedProcessTimeoutInSeconds>
                         </configuration>
